--- a/src/Package.tt
+++ b/src/Package.tt
@@ -11,6 +11,10 @@
     <description>A fast and lightest prototype inheritance when you can't use any complied library such as TypeScript or Google Closure</description>
     <owners>DotNetWise</owners>
     <releaseNotes>
+      Fixed defining mixins with Function.define({
+        constructor: function() {
+        }
+      });
     </releaseNotes>
     <summary>
     </summary>
@@ -25,7 +29,7 @@
     <frameworkAssemblies>
     </frameworkAssemblies>
     <references></references>
-    <tags>Javascript prototype inheritance FastClass fast class inheritWith inherit with define dotnetwise dnw</tags>
+    <tags>Javascript prototype inheritance fastClass mixin mixins fast class inheritWith inherit with define dotnetwise dnw</tags>
   </metadata>
   <files>
     <file src="lib\" target="lib" />
